fixing hamburger position on mobile view

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -575,7 +575,7 @@ aside.open {
   color: #808080;
 }
 #aside-open-button {
-  background-color: transparent;
+  background-color: blue;
   border: none;
   width: 100%;
   height: 100%;
@@ -704,5 +704,8 @@ ul.categories {
   .profile-orders {
     flex-basis: 100%;
     width: 100%;
+  }
+  .hamburger {
+    margin-bottom: 10px;
   }
 }
